fixes btp button mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -502,7 +502,7 @@ div.phone {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
     bottom: 20px; /* Place the button at the bottom of the page */
-    right: 25px; /* Place the button 25px from the right */
+    right: 30px; /* Place the button 30px from the right */
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
     outline: none; /* Remove outline */
@@ -513,10 +513,11 @@ div.phone {
     font-size: 2.5rem; /* Increase font size */
     width: 50px;
     height: 50px;
+    opacity: 50%;
   }
   
   #myBtn:hover {
-    background-color: var(--grey) /* Add a grey background on hover */
+    opacity: 100%; 
   }
 
   div.cat{
